samples/_failures_safe/1761469903_edc785_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ae66f67.c: In function ‘main’:
./samples/SAFE/__tmp_3ae66f67.c:160:41: error: expected ‘;’ at end of input
  160 |     for (int i = 0; i < graph.node_count
      |                                         ^
      |                                         ;
./samples/SAFE/__tmp_3ae66f67.c:160:5: error: expected declaration or statement at end of input
  160 |     for (int i = 0; i < graph.node_count
      |     ^~~
